{
    "name": "InputSystem",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "8e7ed365-ebc1-46cc-a601-ca2640087016",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "5272d0ee-ed9a-496b-9957-d559c6394fd7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6b5faca4-a075-43a6-b056-6d5a69c93064",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8915a8f3-8651-4876-b52a-041d81d3c3bd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e793e4a-f13c-4233-8978-a811374fcf77",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}